--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,19 +1,12 @@
 /**index.wxss**/
-.userinfo {
+.container{
+  height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
+  justify-content: space-around;
 }
-
-.userinfo-avatar {
-  overflow: hidden;
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+image{
+  width:300rpx;
   border-radius: 50%;
-}
-
-.usermotto {
-  margin-top: 200px;
 }
