--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,5 +6,9 @@
 <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile" class="btn1"> 登入 </button>
 <button wx:else class='btn1' open-type="getUserInfo" bindgetuserinfo="getUserInfo">登入</button>
 </block>
+<block wx:else class="loginafter">
+<image bindtap="bindViewTap" src="{{userInfo.avatarUrl}}" mode="cover" class="userinfo-avartar"></image>
+<button class="btn1" bindtap="switchpage">首页</button>
+</block>
 </view>
 </view>
