发布半完成版

--- a/pages/index/index2.wxml
+++ b/pages/index/index2.wxml
@@ -1,16 +1,33 @@
 <!--pages/index/index2.wxml-->
 <view class="page2text">
-<view class="left"></view>
+<view class="left"></view>      <!--左空-->
+
 <view class="middle">
 <view>
 <text class="title">通知</text>
 </view>
-<view style="text-align: left;text-indent: 30px;">
-<text class="input">{{temptext}}</text>
+<view style="text-align: left;">
+<input placeholder="标题(如：xxx防疫通知)" style="text-align: center;"></input>
+<textarea class="input" bindinput="content"></textarea> <!--文章内容-->
+<input placeholder="发布者" style="margin-top:10px;text-align: right;margin-right:5px;" maxlength="50"></input>
+<input placeholder="通知日期" style="margin-top: 10px;text-align: right;margin-bottom: 10px;margin-right: 5px;"></input>
 </view>
-<view style="text-align: right;">
-<text class="input">{{editor}}</text>
 </view>
+
+<view class="right"></view>         <!--右空-->
+
+
+<view style="margin-top: 10px;">
+<button style="color: white;background-color: red;border-radius:10px;width: 90%;" bindtap="submit">创建</button>
 </view>
-<view class="right"></view>
+<text>{{content}}</text>
+</view>
+
+
+<view class="mask" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
+
+<view class="modalDlg" wx:if="{{showModal}}">
+ <text>确认提交？~</text>
+  <button bindtap="complete">是</button>
+  <button bindtap="go">否</button>
 </view>
