--- a/pages/index/index2.wxss
+++ b/pages/index/index2.wxss
@@ -8,7 +8,6 @@
 
 }
 .middle{
-    height: 500px;
     margin: 0 10px 0 10px;
     border: solid rgb(196, 0, 0);
     text-align: center;
@@ -21,12 +20,10 @@
     right: 0;
 }
 .input{
-    height: 450px;
+    height: 300px;
     width:100%;
     margin-top:10px;
     font-size: 20px;
-    margin-left: 5px;
-    margin-right:5px;
     font-family: 'Times New Roman', Times, serif;
 }
 .title{
@@ -34,3 +31,28 @@
     color: rgb(196, 0, 0);
     width: 100%;
 }
+.mask{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+    z-index: 9000;
+    opacity: 0.7;
+   }
+   
+   .modalDlg{
+    width: 580rpx;
+    height: 620rpx;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    z-index: 9999;
+    margin: -370rpx 85rpx;
+    background-color: #fff;
+    border-radius: 36rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   }
