--- a/pages/index/index3.wxss
+++ b/pages/index/index3.wxss
@@ -1,1 +1,37 @@
 /* pages/index/index3.wxss */
+/* pages/index/index2.wxss */
+.left{
+    width:20px;
+    height:500px;
+    position: absolute;
+    top: 0;
+    left:0;
+
+}
+.middle{
+    height: 500px;
+    margin: 0 10px 0 10px;
+    border: solid rgb(196, 0, 0);
+    text-align: center;
+}
+.right{
+    width: 20px;
+    height: 500px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.input{
+    height: 450px;
+    width:100%;
+    margin-top:10px;
+    font-size: 20px;
+    margin-left: 5px;
+    margin-right:5px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.title{
+    font-size:40px;
+    color: rgb(196, 0, 0);
+    width: 100%;
+}
