数据库准备版

--- a/pages/index/index2.wxml
+++ b/pages/index/index2.wxml
@@ -28,6 +28,6 @@
 
 <view class="modalDlg" wx:if="{{showModal}}">
  <text>确认提交？~</text>
-  <button bindtap="complete">是</button>
+  <button bindtap="upDate">是</button>
   <button bindtap="go">否</button>
 </view>
