--- a/pages/index/index2.wxss
+++ b/pages/index/index2.wxss
@@ -1,75 +1,38 @@
-.card-dot {
-    width: 18rpx;
-    height: 18rpx;
-    border-radius: 50%;
-    border: 6rpx solid #3963bc;
-    margin-left: 26rpx;
-  }
-  
-  .card-top {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 750rpx;
-    height: 100rpx;
-  }
-  
-  .content-name {
-    font-size: 28rpx;
-    font-family: PingFangSC-Regular;
-    font-weight: 400;
-    color: rgba(69, 82, 107, 1);
-    line-height: 20px;
-    margin-left: 8px;
-  }
-  
-  .card {
-    margin: 10rpx auto !important;
-  }
-  
-  .right-card {
-    height: 180rpx !important;
-    width: 220rpx !important;
-    border-radius: 12rpx !important;
-  }
-  
-  .content {
-    margin-top: 10rpx;
-    color: #666;
-    font-size: 26rpx;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
-  }
-  
-  .avter-content {
-    margin-top: 10rpx;
-    color: #333;
-    font-size: 26rpx;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
-  }
-  
-  .avter-share-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  }
-  
-  .like-container{
-    display: flex;
-    flex-direction: row;
-    margin-left: 40rpx;
-    align-items: center
-  }
-  
-  .number{
-    color: #666;
-    font-size: 24rpx;
-    margin-left: 12rpx;
-  }
+.page{
+  background-color: #f1f1f1;
+  height:0px;
+  min-height: 100vh;
+}
+
+.card{
+  margin-top: 20rpx;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  white-space: normal !important;
+  -webkit-line-clamp:1;
+  -webkit-box-orient: vertical;
+}
+
+.loading {
+  position: relative;
+  bottom: 5rpx;
+  padding: 10rpx;
+  text-align: center;
+}
+.cardclass{
+  height: 100vh;
+  width: 100vw;
+}
+.avter-content{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  width: 85vw;
+  height: 7vh;
+  word-break:keep-all;
+  color: rgb(143, 143, 143);
+}
