--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,8 +14,8 @@ justify-content: space-around;
 }
 .img{
   border-radius: 50%;
-  height: 60vh;
-  width: 60vh;
+  height: 30vh;
+  width: 30vh;
 }
 text{
   font-size: 50rpx;
@@ -26,7 +26,7 @@ text{
  width: 80%;
  border-radius: 100rpx;
  font-size: 30rpx;
- background-color: rgb(49, 55, 112);
+ background-color: rgb(81, 240, 107);
  color:white;
 }
 
@@ -42,4 +42,10 @@ text{
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+.backgroundimg{
+  position: absolute;
+  width: 100%;
+  height: 600rpx;
 }
