--- a/pages/index/index3.wxss
+++ b/pages/index/index3.wxss
@@ -1,31 +1,20 @@
 /* pages/index/index3.wxss */
 /* pages/index/index2.wxss */
-.left{
-    width:20px;
-    height:500px;
-    position: absolute;
-    top: 0;
-    left:0;
-
-}
 .middle{
-    height: 500px;
-    margin: 0 10px 0 10px;
-    border: solid rgb(196, 0, 0);
+    margin: 10px;
     text-align: center;
-}
-.right{
-    width: 20px;
-    height: 500px;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
+    height: 80vh;
+    overflow-wrap: break-word;
+    display:flex; 
+    flex-direction:column;
+  }
+
+
 .input{
-    height: 450px;
-    width:100%;
+    height: 45vh;
+    width: 91vw;
     margin-top:10px;
-    font-size: 20px;
+    font-size: 4.5mm;
     margin-left: 5px;
     margin-right:5px;
     font-family: 'Times New Roman', Times, serif;
@@ -35,3 +24,29 @@
     color: rgb(196, 0, 0);
     width: 100%;
 }
+
+.mask{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+    z-index: 9000;
+    opacity: 0.7;
+   }
+   
+   .modalDlg{
+    width: 580rpx;
+    height: 620rpx;
+    position: fixed;
+    top: 50%;
+    left: 0;
+    z-index: 9999;
+    margin: -370rpx 85rpx;
+    background-color: #fff;
+    border-radius: 36rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   }
