--- a/pages/index/index4.wxml
+++ b/pages/index/index4.wxml
@@ -7,3 +7,11 @@
 <l-list title="设置字体大小" bind:lintap="setting"></l-list>
 </view>
 </view>
+
+<l-dialog title="设置字体大小" show="{{dialogShow}}">
+<l-radio-group placement="column" current="{{}}" bind:linchange="radioChange"	>
+    <l-radio key="1" l-class="radio"><view style="font-size: 4.5mm;">小</view></l-radio>
+    <l-radio key="2" l-class="radio"><view style="font-size: 5mm;">中</view></l-radio>
+    <l-radio key="3" l-class="radio"><view style="font-size: 5.5mm;">大</view></l-radio>
+</l-radio-group> 
+</l-dialog>
