--- a/pages/index/index3.wxss
+++ b/pages/index/index3.wxss
@@ -11,16 +11,16 @@
 
 
 .input{
-    height: 45vh;
+    height: calc(45vh + 0.5 * (1rem - 16px));
     width: 91vw;
     margin-top:10px;
-    font-size: 4.5mm;
+    font-size: calc(4.5mm + 0.5 * (1rem - 16px));
     margin-left: 5px;
     margin-right:5px;
     font-family: 'Times New Roman', Times, serif;
 }
 .title{
-    font-size:40px;
+    font-size:calc(40px + 0.5 * (1rem - 16px));
     color: rgb(196, 0, 0);
     width: 100%;
 }
