--- a/pages/index/selectcontent.wxss
+++ b/pages/index/selectcontent.wxss
@@ -11,7 +11,7 @@
 }
 
 .title{
-  font-size:40px;
+  font-size:calc(40px + 0.5 * (1rem - 16px));
   color: red;
   width: 100%;
 }
@@ -35,4 +35,21 @@
 .cardimg{
   height: 30px !important;
   width: 30px !important;
+}
+.class{
+  font-size: calc(4.5mm + 0.5 * (1rem - 16px));
+}
+.author{
+  font-size:calc(3.5mm + 0.5 * (1rem - 16px));
+  text-align: right;
+  margin-bottom:10px
+}
+.content{
+  font-size: calc(4.5mm + 0.5 * (1rem - 16px));
+}
+
+.date{
+  font-size:3.5mm;
+  text-align: right;
+  margin-bottom:10px
 }
